Sitemap and videos on mobile

--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
-permalink: /404.html
+permalink: /404
 layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .error {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
@@ -17,11 +17,11 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="error">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
+  <p><strong>Page not found 🥺</strong></p>
   <p>The requested page could not be found.</p>
-
+  <a href="/" class="text-info">Home</a>
   <br><br>
 </div>
